--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-        <h1>print('lord')</h1>  
+        <p>print('lord')</p>  
     </main>
 	<script src="index.js"></script>
   </body>
